# hope-country-report

./: .dockerignore  .envrc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pdm-python  .pre-commit-config.yaml  CHANGES  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  compose.override.yml  compose.prd.yml  compose.test.yml  compose.yml  entrypoint.sh  junit.xml  manage.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini
.github/: dependabot.yml  file-filters.yml  sdlc-develop-push.yml  sdlc-stable.yml  sdlc-uat-push.yml
.github/actions/docker_build/: action.yml
.github/actions/last_commit/: action.yml
.github/workflows/: ci.yml  docs.yml  label-pullrequest.yml  lint.yml  release.yml  sdlc-develop-push.yml  sdlc-other-branches-push.yml  sdlc-push.yml  sdlc-stable.yml  sdlc-uat-create.yml  sdlc-uat-push.yml  sdlc-version-create.yml  test.yml  trigger-azure-pipeline.yml
docker/: Dockerfile  Makefile  entrypoint.sh
docker/conf/: circus.conf  gunicorn_config.py  nginx.conf  nginx.conf.tpl  redis.conf  redis.conf.tpl  uwsgi.ini
docker/conf/nginx/: 404.html  50x.html  _maintenance.html  error.html
docs/: components.md  index.md  mkdocs.yml  tmp.md
docs/_hooks/: hooks.py
docs/docs/: components.md  glossary.md  index.md
docs/docs-output/: 404.html  index.html  sitemap.xml
docs/docs-output/components/: index.html
docs/docs-output/css/: bootstrap.min.css.map
docs/docs-output/glossary/: index.html
docs/docs-output/search/: search_index.json
docs/docs-output/setup/: index.html
docs/docs-output/setup/config/: index.html
docs/docs-output/setup/docker/: index.html
docs/docs-output/setup/virtualenv/: index.html
docs/docs-output/tmp/: index.html
docs/docs-output/tutorials/: index.html
docs/docs-output/tutorials/banks/: index.html
docs/docs-output/tutorials/hh/: index.html
docs/docs-output/tutorials/payment_r/: index.html
docs/docs-output/tutorials/simple/: index.html
docs/setup/: config.md  docker.md  virtualenv.md
docs/tutorials/: .pages  banks.md  hh.md  index.md  payment_r.md  simple.md
mypy_tools/: mypy_plugin.py
ops/: cd-dev.yaml  ci.yaml  compose.ci-test.yml  compose.test.yml
ops/hope-country-report/: Chart.yaml  values.yaml
ops/hope-country-report/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
ops/hope-country-report/templates/tests/: test-connection.yaml
src/hope_country_report/: __init__.py  state.py
src/hope_country_report/api/: router.py  serializers.py  urls.py  views.py
src/hope_country_report/apps/admin/: apps.py  checks.py  sites.py
src/hope_country_report/apps/charts/: serializer.py
src/hope_country_report/apps/core/: admin.py  admin_t.py  apps.py  dbrouters.py  forms.py  models.py  storage.py  utils.py
src/hope_country_report/apps/hope/: admin.py  admin_t.py  apps.py  checks.py  models.py
src/hope_country_report/apps/power_query/: __init__.py  admin.py  apps.py  backends.py  celery_tasks.py  defaults.py  exceptions.py  fixtures.py  forms.py  json.py  manager.py  mixin.py  models.py  processors.py  scheduler.py  storage.py  urls.py  utils.py  validators.py  views.py  widget.py
src/hope_country_report/apps/pq/: admin_t.py  apps.py
src/hope_country_report/apps/stream/: admin.py  apps.py  handlers.py  models.py
src/hope_country_report/apps/tenant/: apps.py  auth.py  backend.py  config.py  db.py  exceptions.py  forms.py  options.py  (+6 more)
src/hope_country_report/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/hope_country_report/middleware/: exception.py  i18n.py  minify.py  security.py  silk.py  social_auth.py  state.py  tenant.py  user_agent.py  user_language.py
src/hope_country_report/types/: django.py  django.pyi  hope.pyi  http.pyi  pq.py  pq.pyi  tenant.py
src/hope_country_report/utils/: ddt.py  flags.py  language.py  lru.py  mail.py  media.py  os.py  perf.py  qr.py  signer.py  singleton.py
src/hope_country_report/web/: context_processors.py  forms.py  urls.py  views.py
src/power_query/: admin.py  fixtures.py  models.py  utils.py  views.py
src/power_query/migrations/: 0001_initial.py
src/tenant_admin/: apps.py  auth.py  backend.py  checks.py  config.py  exceptions.py  forms.py  middleware.py  monkeypatch.py  options.py  resolver.py  sites.py  skeleton.py  strategy.py  urls.py  utils.py  views.py
src/tenant_admin/templatetags/: tenant_admin.py
src/tenant_admin/types/: http.pyi
tests/: .coveragerc  conftest.py  docker-compose.yml  test_access.py  test_checks.py  test_commands.py  test_dbrouters.py  test_middleware.py  test_pq.py  test_reverse.py  test_silk.py  test_state.py  test_tenant_permissions.py  test_utils.py  test_wsgi.py
tests/admin/: test_admin.py  test_admin_dataset.py  test_admin_formatter.py  test_admin_hope.py  test_admin_pq.py  test_admin_query.py  test_admin_rt.py  test_panels.py
tests/api/: conftest.py  test_api_ep.py  test_api_home.py  test_api_permissions.py  test_report_filtering.py
tests/core/: test_core_flags.py
tests/extras/testutils/: perms.py  selenium.py  utils.py
tests/functional/: conftest.py  test_f_crawl.py  test_f_profile.py
tests/hope/: test_hope_ba.py  test_hope_patcher.py
tests/power_query/: test_models.py  test_pq.py  test_pq_backend.py  test_pq_celery.py  test_pq_dataset.py  test_pq_exception.py  test_pq_formatter.py  test_pq_json.py  test_pq_manager.py  test_pq_params.py  test_pq_processors.py  test_pq_query.py  test_pq_report.py  test_pq_utils.py  test_pq_views.py
tests/stream/: test_handlers.py  test_models.py
tests/streaming/: factories.py  test_handlers.py  test_models.py
tests/tenant/: test_tenant_backend.py  test_tenant_filtering.py  test_tenant_manager.py  test_tenant_middleware.py  test_tenant_permissions.py
tests/utils/: test_ut_ddt.py  test_ut_flags.py  test_ut_mail.py  test_ut_os.py  test_ut_perf.py  test_ut_qr.py  test_ut_tests.py
tests/web/: test_web_views.py
tests/web/templatetags/: test_tags_browser.py  test_tags_colors.py  test_tags_filters.py  test_tags_user_tz.py
(+254 files in other folders)
