[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "hcr"
description = "Hope Country Report for displaying Hope data"
readme = "README.md"
keywords = [ "HOPE", "UNICEF" ]
license = { text = "MIT" }
authors = [
  { name = "sax", email = "s.apostolico@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "azure-devops",
  "celery",
  "django",
  "django-admin-cursor-paginator",
  "django-admin-extra-buttons",
  "django-adminactions",
  "django-adminfilters",
  "django-advanced-filters",
  "django-anymail",
  "django-bitfield",
  "django-celery-beat",
  "django-celery-boost",
  "django-celery-results",
  "django-chartjs",
  "django-cleanup",
  "django-concurrency",
  "django-cors-headers",
  "django-csp",
  "django-debug-toolbar",
  "django-entangled",
  "django-environ",
  "django-extensions",
  "django-filter",
  "django-flags",
  "django-geojson[field]",
  "django-hijack",
  "django-import-export",
  "django-jsoneditor",
  "django-leaflet",
  "django-mptt",
  "django-push-notifications",
  "django-regex",
  "django-select2",
  "django-silk",
  "django-slick-reporting",
  "django-smart-admin",
  "django-smart-env",
  "django-storages[azure]",
  "django-strategy-field",
  "django-stubs-ext",
  "django-taggit",
  "django-tailwind",
  "django-timezone-field",
  "django-user-language-middleware",
  "django-zen-queries",
  "djangorestframework",
  "djangorestframework-gis",
  "docutils",
  "docx2pdf",
  "docxtpl",
  "drf-api-checker",
  "drf-extensions",
  "flower",
  "geojson",
  "hatch>=1.14.1",
  "htmlmin2",
  "natural-keys",
  "pathvalidate",
  "pdfkit",
  "pillow",
  "psycopg2-binary<=2.9.10",
  "py-vapid",
  "pyhtml2pdf",
  "pymupdf",
  "pypdf",
  "pytest-xdist",
  "python-pptx",
  "pytopojson",
  "pytz",
  "pyzipper",
  "qrcode",
  "redis",
  "ruff",
  "sentry-sdk",
  "shapely",
  "social-auth-app-django",
  "sqlparse",
  "swapper",
  "tablib[xlsx]",
  "tzdata",
  "unicef-security",
  "watchdog[watchmedo]",
]

urls.Documentation = "https://unicef.github.io/hope-country-report"
urls.Issues = "https://github.com/unicef/hope-country-report/issues"
urls.Source = "https://github.com/unicef/hope-country-report"

[dependency-groups]
dev = [
  "black",
  "django-stubs",
  "django-stubs-ext",
  "django-webtest",
  "drf-api-checker",
  "factory-boy",
  "flake8",
  "freezegun",
  "fs",
  "isort",
  "mypy",
  "pdbpp",
  "pre-commit",
  "py",
  "pymdown-extensions",
  "pyquery",
  "pytest",
  "pytest-celery",
  "pytest-cov",
  "pytest-django",
  "pytest-echo",
  "pytest-selenium",
  "pyupgrade",
  "responses",
  "selenium",
  "tox",
  "types-freezegun",
  "types-python-dateutil",
  "types-pytz",
  "types-redis",
  "types-requests",
  "types-setuptools",
]

docs = [
  "cairosvg>=2.7.1",
  "markupsafe>=2.1.5",
  "mdx-gh-links>=0.4",
  "mkdocs>=1.6.1",
  "mkdocs-autolinks-plugin>=0.7.1",
  "mkdocs-awesome-pages-plugin>=2.9.3",
  "mkdocs-click>=0.8.1",
  "mkdocs-embed-external-markdown>=3.0.2",
  "mkdocs-ezglossary-plugin>=1.6.10",
  "mkdocs-ezlinks-plugin>=0.1.14",
  "mkdocs-gen-files>=0.5",
  "mkdocs-get-deps>=0.2",
  "mkdocs-gitsnippet-plugin",
  "mkdocs-include-markdown-plugin>=6.2.2",
  "mkdocs-link-marker>=0.1.3",
  "mkdocs-macros-plugin>=1.0.5",
  "mkdocs-material>=9.5.36",
  "mkdocs-minify-plugin>=0.8",
  "mkdocs-panzoom-plugin",
  "mkdocs-redirects>=1.2.1",
  "mkdocs-simple-hooks>=0.1.5",
  "mkdocstrings[python]>=0.24.1",
  "mkdocstrings-python",
  "pymdown-extensions>=10.7.1",
]

types-decorator = [
  "types-six>=1.16.21.20241105",
]

mypy = [
  "djangorestframework-stubs",
  "lxml-stubs",
  "mypy",
  "types-defusedxml",
  "types-gevent",
  "types-html5lib",
  "types-jmespath",
  "types-markdown",
  "types-psycopg2",
  "types-pygments",
  "types-python-dateutil",
  "types-pytz",
  "types-qrcode",
  "types-requests",
]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_django = "django"
known_typing = [ "typing" ]
known_tests = [ "unittest", "pytest" ]
known_app = "hope_country_report"
sections = [ "FUTURE", 'TYPING', 'STDLIB', "TESTS", 'DJANGO', 'THIRDPARTY', 'APP', 'LOCALFOLDER' ]
multi_line_output = 3
line_length = 120
balanced_wrapping = true
order_by_type = false
skip_glob = [ "**/migrations/**" ]

[tool.uv]
package = true

[tool.hatch.build.targets.sdist]
include = [
  "src/hope_country_report/**/*.*",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/hope_country_report",
]

[tool.nitpick]
style = [
  "github://unicef/hope-code-conventions@main/django/django.toml",
]
cache = "1 day"
